[package]
name = "alice-cdn"
version = "0.2.0"
edition = "2021"
authors = ["Moroya Sakamoto"]
description = "Decentralized Latency-Optimized Content Delivery - Optimized Edition"
license = "AGPL-3.0"
repository = "https://github.com/ext-sakamoro/ALICE-CDN"

[features]
default = ["std"]
std = []

[dependencies]
# Minimal dependencies - fixed-point math is self-implemented

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "cdn_bench"
harness = false

[[example]]
name = "vivaldi_network"

[[example]]
name = "content_routing"
