[package]
name = "alice-cdn"
version = "0.2.0"
edition = "2021"
authors = ["Moroya Sakamoto"]
description = "Decentralized Latency-Optimized Content Delivery - Optimized Edition"
license = "AGPL-3.0"
repository = "https://github.com/ext-sakamoro/ALICE-CDN"
publish = false

[features]
default = ["std"]
std = []
content_types = []  # Content type awareness (ASDF, Mesh, Texture, Audio)
cache = ["dep:alice-cache"]      # ALICE-Cache edge-node caching integration
analytics = ["dep:alice-analytics"]  # ALICE-Analytics delivery metrics
asp = ["dep:libasp", "std"]  # ALICE-Streaming-Protocol ASP stream routing
crypto = ["dep:alice-crypto", "std"]  # ALICE-Crypto content encryption (DRM, signed payloads)
sdf = ["std"]  # SDF-aware CDN routing (spatial cell → edge node)

[dependencies]
# ALICE Ecosystem (optional)
alice-cache = { path = "../ALICE-Cache", optional = true }
alice-analytics = { path = "../ALICE-Analytics", optional = true, default-features = false, features = ["std"] }
libasp = { path = "../ALICE-Streaming-Protocol", optional = true, default-features = false }
alice-crypto = { path = "../ALICE-Crypto", optional = true, default-features = false, features = ["std"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "cdn_bench"
harness = false

[[example]]
name = "vivaldi_network"

[[example]]
name = "content_routing"
